--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
     "name": "Infinity",
-    "slug": "NasaApp",
+    "slug": "Infinity",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/ic_launcher.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/ic_launcher.png",
+      "image": "./assets/cooltext.png.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/ic_launcher.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.benco112.Infinity"
     },
     "web": {
       "favicon": "./assets/ic_launcher.png"
