--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "expo-updates": "~0.13.3"
+    "expo-updates": "~0.13.3",
+    "expo-file-system": "~14.0.0",
+    "expo-media-library": "~14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
