--- a/app.json
+++ b/app.json
@@ -2,12 +2,12 @@
   "expo": {
     "name": "Infinity",
     "slug": "Infinity",
-    "version": "0.2.0-alpha.1",
+    "version": "0.2.12-alpha.1",
     "orientation": "portrait",
-    "icon": "./assets/ic_launcher.png",
+    "icon": "./assets/icon_launcher.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/cooltext.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,13 +22,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/ic_launcher.png",
+        "foregroundImage": "./assets/icon_launcher.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.benco112.Infinity"
     },
     "web": {
-      "favicon": "./assets/ic_launcher.png"
+      "favicon": "./assets/icon_launcher.png"
     }
   }
 }
